objects/SurveyQuestion__c.object
<CustomObject>
    <fields>
        <fullName>AnswerType__c</fullName>
        <label>Answer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuestionEID__c</fullName>
        <externalId>true</externalId>
        <label>Question EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SurveyQuestionEID__c</fullName>
        <description>The Enterprise ID for this Survey Question record.</description>
        <displayFormat>{0}</displayFormat>
        <inlineHelpText>The Enterprise ID for this Survey Question record.</inlineHelpText>
        <label>Survey Question EID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SurveyQuestionText__c</fullName>
        <description>The text of the survey question presented to the employee</description>
        <inlineHelpText>The text of the survey question presented to the employee</inlineHelpText>
        <label>Survey Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Assistance (General)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Assistance (SNAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Assistance (SSI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Assistance (TANF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workforce Investment Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Survey Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>QuestionEID__c</columns>
        <columns>Topic__c</columns>
        <columns>NAME</columns>
        <columns>SurveyQuestionText__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>